--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div class="container-fluid">
 <div class="row">
-    <div class="col-md-6 h-100">
+    <div class="col-12  col-md-6 h-100">
     <div class="card">
         <h1 class="card-header blue-gradient"><i class="fas fa-key"></i> Sign in</h1>
         <form onsubmit="signin(); return false" class="card-body">
@@ -53,7 +53,7 @@
     </div>
     </div>
 
-    <div class="col-md-6 d-sm-none d-md-block">
+    <div class="col-md-6 d-none d-sm-none d-md-block">
         <img src="img/login.png" id="login-img" height="90%" alt="login">
     </div>
 </div>
