Calendar in event page

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <div class="container-fluid">
 <div class="row">
     <div class="col-12  col-md-6 h-100">
-    <div class="card">
+    <div class="card" id="card1">
         <h1 class="card-header blue-gradient"><i class="fas fa-key"></i> Sign in</h1>
-        <form onsubmit="signin(); return false" class="card-body">
+        <form onsubmit="signin(); return false" class="card-body" id="card-body1">
             <div class="md-form">
                 <i class="fas fa-envelope prefix"></i>
                 <input type="text" id="email" class="form-control" required>
