--- a/events.html
+++ b/events.html
@@ -28,10 +28,10 @@
     <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item" id="current">
             <a class="nav-link waves-effect waves-light">
-                <i class="fab fa-google-plus-g"></i>
+                <i class="fas fa-circle"></i>
             </a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown pl-4">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-user"></i>
@@ -46,7 +46,7 @@
 </nav>
 
 
-<div class="container col-12 col-md-8 col-lg-8 mt-1">
+<div class="container col-12 col-md-10 col-lg-8 mt-1">
         <div class="card">
             <h3 class="card-header blue-gradient text-light" id="monthAndYear"></h3>
             <table class="table table-bordered table-responsive-sm" id="calendar">
@@ -104,6 +104,36 @@
         </div>
     </div>
 
+<!-- Modal for adding events -->
+<div class="modal fade bottom" id="addEvent" tabindex="-1" role="dialog" aria-labelledby="exampleModalPreviewLabel" aria-hidden="true" data-backdrop='false'>
+<div class="modal-dialog modal-lg modal-frame modal-bottom" role="document">
+    <div class="modal-content">
+    <div class="modal-header">
+        <h5 class="modal-title" id="eventTitle"> </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body row">
+
+        <div class="md-form col-6">
+            <i class="far fa-clipboard prefix"></i>
+            <input type="text" id="inputIconEx1" class="form-control">
+            <label for="inputIconEx1">Add a note</label>
+
+        </div>
+        <div class="col-2 mt-3">
+                <button type="button" class="btn btn-cyan">Add</button>
+        </div>
+
+    </div>
+    <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+    </div>
+    </div>
+</div>
+</div>
+<!-- End -->
 
 
 
