--- a/events.html
+++ b/events.html
@@ -115,17 +115,15 @@
         </button>
     </div>
     <div class="modal-body row">
-
         <div class="md-form col-6">
             <i class="far fa-clipboard prefix"></i>
             <input type="text" id="inputIconEx1" class="form-control">
             <label for="inputIconEx1">Add a note</label>
-
         </div>
         <div class="col-2 mt-3">
                 <button type="button" class="btn btn-cyan">Add</button>
         </div>
-
+        <div class="col-12" id="existedNotes"></div>
     </div>
     <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
