--- a/events.html
+++ b/events.html
@@ -117,11 +117,11 @@
     <div class="modal-body row">
         <div class="md-form col-6">
             <i class="far fa-clipboard prefix"></i>
-            <input type="text" id="inputIconEx1" class="form-control">
-            <label for="inputIconEx1">Add a note</label>
+            <input type="text" id="note" class="form-control">
+            <label for="note">Add a note</label>
         </div>
         <div class="col-2 mt-3">
-                <button type="button" class="btn btn-cyan">Add</button>
+                <button type="button" class="btn btn-cyan" id="addNote">Add</button>
         </div>
         <div class="col-12" id="existedNotes"></div>
     </div>
