add note btn disable

--- a/events.html
+++ b/events.html
@@ -117,14 +117,13 @@
     <div class="modal-body row">
         <div class="md-form col-6">
             <i class="far fa-clipboard prefix"></i>
-            <input type="text" id="note" class="form-control" required>
+            <input type="text" id="note" class="form-control">
             <label for="note">Add a note</label>
         </div>
         <div class="col-2 mt-3">
-                <button type="button" class="btn btn-cyan" id="addNote">Add</button>
+                <i class="fas fa-plus fa-3x text-primary fa-disabled" id="addNote"></i>
         </div>
-        <div class="col-12" id="existedNotes">
-            
+        <div class="col-12" id="existedNotes">      
         </div>
     </div>
     <div class="modal-footer">
