--- a/events.html
+++ b/events.html
@@ -31,8 +31,8 @@
           <span id="userName"></span>
         </a>         
      </li>
-      <li class="nav-item pl-3" id="current">
-            <a class="nav-link waves-effect waves-light" data-toggle="modal" data-target="#fullHeightModalRight">
+    <li class="nav-item pl-3" id="current">
+            <a class="nav-link waves-effect waves-light" id="weeklyNotesBtn">
                 <i class="fas fa-tasks" ></i> Tasks
             </a>
         </li>
@@ -134,7 +134,7 @@
 <!-- End -->
 
 <!-- Weekly tasks -->
-<div class="modal fade right" id="fullHeightModalRight" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+<div class="modal fade right" id="weeklyNotesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-full-height modal-right" role="document">
     <div class="modal-content">
@@ -157,15 +157,12 @@
           </ul>
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="thisWeekNotes" role="tabpanel" aria-labelledby="thisWeekNotes-tab">
-                
+ 
             </div>
             <div class="tab-pane fade" id="nxtWeekNotes" role="tabpanel" aria-labelledby="nxtWeekNotes-tab">
                 
             </div>
           </div>
-      </div>
-      <div class="modal-footer justify-content-center">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
