edit functionality complete

--- a/events.html
+++ b/events.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-<!-- Modal for adding events -->
+<!-- Modal for adding notes -->
 <div class="modal fade bottom" id="addEvent" tabindex="-1" role="dialog" aria-labelledby="exampleModalPreviewLabel" aria-hidden="true" data-backdrop='false'>
 <div class="modal-dialog modal-lg modal-frame modal-bottom" role="document">
     <div class="modal-content">
@@ -138,7 +138,7 @@
 </div>
 <!-- End -->
 
-<!-- Modal for Weekly tasks -->
+<!-- Modal for Weekly notes -->
 <div class="modal fade right" id="weeklyNotesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-full-height modal-right" role="document">
