--- a/events.html
+++ b/events.html
@@ -114,22 +114,25 @@
     <div class="modal-content">
     <div class="modal-header">
         <h5 class="modal-title" id="eventTitle"> </h5>
-        <button class="btn btn-primary" id="deleteAllBtn">Delete All</button>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body row">
-        <div class="md-form col-6">
-            <i class="far fa-clipboard prefix"></i>
-            <input type="text" id="note" class="form-control">
-            <label for="note">Add a note</label>
+    <div class="modal-body">
+      <div id="addNoteDiv">
+        <div class="row">
+            <div class="md-form col-6">
+                <i class="far fa-clipboard prefix"></i>
+                <input type="text" id="note" class="form-control">
+                <label for="note">Add a note</label>
+            </div>
+            <div class="col-2 mt-3">
+                    <i class="fas fa-plus fa-3x text-primary fa-disabled" data-toggle="tooltip" data-placement="right" title="Add note" id="addNote"></i>
+            </div>
         </div>
-        <div class="col-2 mt-3">
-                <i class="fas fa-plus fa-3x text-primary fa-disabled" data-toggle="tooltip" data-placement="right" title="Add note" id="addNote"></i>
-        </div>
-        <div class="col-12" id="existedNotes">      
-        </div>
+      </div>
+      <div class="col-12" id="existedNotes">      
+      </div>
     </div>
     <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
