--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
                     <i id="visibilityToggle1" class="far fa-2x fa-eye text-primary"></i>
                 </div>
                 
-            </div><br><br>
+            </div>
             <button class="btn blue-gradient btn-block text-light">Sign in</button>
         </form>
     </div>
     
-    <div id="signup-div" class="p-4">
-        <h4>New User ?</h4>
+    <div id="signup-div" class="p-3">
+        <h4>New User ?
         <a href=""  data-toggle="modal" data-target="#modalRegisterForm" id="signupBtn">
-        Sign up </a>
+        Sign up </a></h4>
     </div>
     </div>
 
-    <div class="col-md-6 d-none d-sm-none d-md-block">
+    <div class="col-md-6 d-none d-sm-none d-md-block animated flipInX">
         <img src="img/login.png" id="login-img" height="90%" alt="login">
     </div>
 </div>
