--- a/events.html
+++ b/events.html
@@ -118,7 +118,7 @@
         <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="modal-body">
+    <div class="modal-body pb-5">
       <div id="addNoteDiv">
         <div class="row">
             <div class="md-form col-6">
@@ -133,9 +133,6 @@
       </div>
       <div class="col-12" id="existedNotes">      
       </div>
-    </div>
-    <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
     </div>
     </div>
 </div>
