One user with one email and favicon

--- a/events.html
+++ b/events.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Calendar Events</title>
+    <link rel="shortcut icon" href="img/calendar.png" type="image/x-icon"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -200,30 +201,25 @@
         <table id="tablePreview" class="table">
             <thead>
               <tr>
-                <th>#</th>
                 <th><b>Key</b></th>
                 <th><b>Action</b></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>p</td>
+                <td>alt+p</td>
                 <td>Previous month calender</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>n</td>
+                <td>alt+n</td>
                 <td>Next month calender</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>s</td>
+                <td>alt+s</td>
                 <td>Show shortcuts</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>l</td>
+                <td>alt+l</td>
                 <td>Logout</td>
               </tr>
             </tbody>
